fix: 文案修改及部分优化

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
 	<!-- 微信分享 -->
 	<script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-	<title>和留言高言值粉丝签到有礼</title>
+	<title>和留言粉丝签到有礼</title>
 	<!-- 使用CDN的JS文件 preload -->
 	<% for (var i in htmlWebpackPlugin.options.cdn && htmlWebpackPlugin.options.cdn.js) { %>
 	<link href="<%= htmlWebpackPlugin.options.cdn.js[i] %>" rel="preload" as="script">
